2008-12-19  Don Porter	<dgp@users.sourceforge.net>

	* README:		Bump version number to 8.6b1
	* generic/tk.h:
	* library/tk.tcl:
	* unix/configure.in:
	* unix/tk.spec:
	* win/configure.in:

	* unix/configure:	autoconf-2.59
	* win/configure:

2008-12-18  Don Porter	<dgp@users.sourceforge.net>

	* library/msgs/de.msg:	Updated German messages.  Thanks to Ruediger
	Haertel. [Patch 2442309].

2008-12-17  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tk.h:           VOID --> void
	* unix/tkUnixPort.h:
	* macosx/tkMacOSXPort.h:

2008-12-17  Donal K. Fellows  <dkf@users.sf.net>

	* doc/selection.n: Assorted small fixes. [Bugs 2441817,2441884]

2008-12-16  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tkWinDialog.c: Remove unused variables

2008-12-15  Don Porter	<dgp@users.sourceforge.net>

	TIP #338 IMPLEMENTATION

	* doc/Tk_Main.c:	Removed the last two '#include "tclInt.h"'.
	* generic/tkMain.c:	Tk is now limited to Tcl's public interface.
	* macosx/tkMacOSXInit.c:

2008-12-12  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/demos/fontchoose.tcl: Simple fontchooser demo
	* library/demos/widget:

2008-12-11  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tk3d.c:    Make error message from Tk_GetRelief the same as
			     for Tk_GetReliefFromObj.
	* tests/canvas.test  Adapt test cases for changed error message.
	* tests/scrollbar.test
	* tests/textTag.test

2008-12-11  Joe English  <jenglish@users.sourceforge.net>

	* library/demos/*.tcl: Omit contraindicated [package require Ttk].
	Remove logic that switches [ttk::scrollbar]s to [tk::scrollbar]s
	based on [tk windowingsystem]; this is already handled in
	library/ttk/scrollbar.tcl.

2008-12-10  Daniel Steffen  <das@users.sourceforge.net>

	TIP #324 IMPLEMENTATION

	* generic/tkCmds.c:		Implementation of [tk fontchooser] as
	* generic/tkInt.h:		a Ttk dialog for X11 and as a native
	* win/tkWinDialog.c:		platform dialog on Mac OS X & Windows.
	* win/tkWinInt.h:		(thoyts, vetter, robert, steffen)