@@ -6,7 +6,7 @@
 # Copyright (c) 1998-1999 by Scriptics Corporation.
 # All rights reserved.
 #
-# RCS: @(#) $Id: textMark.test,v 1.12 2008/12/06 09:51:55 dkf Exp $
+# RCS: @(#) $Id: textMark.test,v 1.13 2008/12/19 15:33:40 dgp Exp $
 
 package require tcltest 2.2
 namespace import ::tcltest::*
@@ -114,7 +114,7 @@ test textMark-4.2 {TkTextMarkCmd - "unset" option} -body {
     .t mark unset a b
     .t index a
 } -returnCodes error -result {bad text index "a"}
-test textMark-4.2 {TkTextMarkCmd - "unset" option} -body {
+test textMark-4.2.1 {TkTextMarkCmd - "unset" option} -body {
     .t mark set a 1.2
     .t mark set b 2.3
     .t mark unset a b
